--- a/template/post.html
+++ b/template/post.html
@@ -7,6 +7,8 @@
     <title></title>
     <link rel="stylesheet" href="/static/css/new.css">
     <link rel="stylesheet" href="/static/css/swiper-bundle-min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
      <!-- js files -->
      <script src="/static/js/swiper-bundle.min.js"></script>
      <script src="/static/js/new.js"></script>
@@ -14,7 +16,7 @@
     <style>
         .post-img {
             height: 55vh;
-            max-width: 90%;
+            max-width: 100%;
             
 
         }
@@ -67,17 +69,17 @@
 </head>
 
 <body>
-    <div class="container ">
+    <div class="container">
         <center><div class="imgC">
-            <img class="post-img" src="/media/{{post.image}}" alt="Card image cap">
+            <img class="post-img" src="/media/{{post.image}}" alt="Card image cap" class="rounded mx-auto d-block"  >
         </div></center>
         <div class="post-body">
             <p class="post-text">{{post.content | safe}}</p>
         </div>
-        <div class="block">
+        <!-- <div class="block">
             <span class="post-category">{{post.cat}}</span><br>
             <center><button class="bt" id="rzp-button1">Make Payment</button></center>
-        </div>
+        </div> -->
         <center><div id="wave">
             <span class="dot"></span>
             <span class="dot"></span>
