--- a/template/index.html
+++ b/template/index.html
@@ -168,7 +168,7 @@
             <img src="/media/{{cat.image}}" alt="" style="width: 22rem;">
             <h3>{{cat.title}}</h3>
             <p>Different Varities and Spcifications available..</p>
-            <a href="/Category/{{cat.url}}" class="bt">shop now</a>
+            <a href="/Category/{{cat.url}}" class="bt">Know more</a>
            
         </div>
         {% endfor %}
