--- a/template/post.html
+++ b/template/post.html
@@ -16,9 +16,7 @@
     <style>
         .post-img {
             height: 55vh;
-            max-width: 100%;
-            
-
+            max-width: 95%;
         }
         .post-body{
             padding: 25px;
@@ -38,10 +36,6 @@
         }
         p{
             font-size: medium;
-        }
-        .imgC {
-             margin: 25px 50px;
-             margin-top: 105px;
         }
         .post-text {
             margin-bottom: 10px;
@@ -69,8 +63,8 @@
 </head>
 
 <body>
-    <div class="container">
-        <center><div class="imgC">
+    <div class="container my-2">
+        <center><div class="">
             <img class="post-img" src="/media/{{post.image}}" alt="Card image cap" class="rounded mx-auto d-block"  >
         </div></center>
         <div class="post-body">
