--- a/template/post.html
+++ b/template/post.html
@@ -45,6 +45,9 @@
         strong{
             font-size: 14px;
         }
+        .imgC{ 
+            margin:auto; 
+         }
         .block{
             padding: 20px;
         }
@@ -64,7 +67,7 @@
 
 <body>
     <div class="container my-2">
-        <center><div class="">
+        <center><div class="imgC">
             <img class="post-img" src="/media/{{post.image}}" alt="Card image cap" class="rounded mx-auto d-block"  >
         </div></center>
         <div class="post-body">
