--- a/template/post.html
+++ b/template/post.html
@@ -16,7 +16,9 @@
     <style>
         .post-img {
             height: 55vh;
-            max-width: 95%;
+            max-width: 100%;
+            
+
         }
         .post-body{
             padding: 25px;
@@ -37,6 +39,10 @@
         p{
             font-size: medium;
         }
+        .imgC {
+             margin: 25px 50px;
+             margin-top: 105px;
+        }
         .post-text {
             margin-bottom: 10px;
             justify-content: center;
@@ -45,9 +51,6 @@
         strong{
             font-size: 14px;
         }
-        .imgC{ 
-            margin:auto; 
-         }
         .block{
             padding: 20px;
         }
@@ -66,7 +69,7 @@
 </head>
 
 <body>
-    <div class="container my-2">
+    <div class="container">
         <center><div class="imgC">
             <img class="post-img" src="/media/{{post.image}}" alt="Card image cap" class="rounded mx-auto d-block"  >
         </div></center>
