--- a/template/post.html
+++ b/template/post.html
@@ -70,10 +70,10 @@
 
 <body>
     <div class="container">
-        <center><div class="imgC">
+        <center><div class="imgC d-block">
             <img class="post-img" src="/media/{{post.image}}" alt="Card image cap" class="rounded mx-auto d-block"  >
         </div></center>
-        <div class="post-body">
+        <div class="post-body d-block">
             <p class="post-text">{{post.content | safe}}</p>
         </div>
         <!-- <div class="block">
