--- a/template/post.html
+++ b/template/post.html
@@ -69,11 +69,11 @@
 </head>
 
 <body>
-    <div class="container">
-        <center><div class="imgC d-block">
+    <div class="container-fluid">
+        <center><div class="imgC">
             <img class="post-img" src="/media/{{post.image}}" alt="Card image cap" class="rounded mx-auto d-block"  >
         </div></center>
-        <div class="post-body d-block">
+        <div class="post-body">
             <p class="post-text">{{post.content | safe}}</p>
         </div>
         <!-- <div class="block">
