--- a/template/post.html
+++ b/template/post.html
@@ -70,7 +70,7 @@
 
 <body>
         <center><div class="imgC">
-            <img class="post-img" src="/media/{{post.image}}" alt="Card image cap" class="rounded mx-auto d-block"  >
+            <img class="img-fluid" src="/media/{{post.image}}" alt="Card image cap" class="rounded mx-auto d-block"  >
         </div></center>
         <div class="post-body">
             <p class="post-text">{{post.content | safe}}</p>
