--- a/template/post.html
+++ b/template/post.html
@@ -69,8 +69,8 @@
 </head>
 
 <body>
-        <center><div class="imgC">
-            <img class="post-img rounded" src="/media/{{post.image}}" alt="Card image cap" class="rounded mx-auto d-block"  >
+        <center><div class="imgC rounded">
+            <img class="post-img " src="/media/{{post.image}}" alt="Card image cap" class="rounded mx-auto d-block"  >
         </div></center>
         <div class="post-body">
             <p class="post-text">{{post.content | safe}}</p>
