--- a/template/post.html
+++ b/template/post.html
@@ -69,6 +69,7 @@
 </head>
 
 <body>
+<div class="container p-3">
         <center><div class="imgC rounded">
             <img class="post-img " src="/media/{{post.image}}" alt="Card image cap" class="rounded mx-auto d-block"  >
         </div></center>
@@ -84,7 +85,7 @@
             <span class="dot"></span>
             <span class="dot"></span>
         </div></center>
-
+</div>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script>
     var options = {
