--- a/template/post.html
+++ b/template/post.html
@@ -15,7 +15,7 @@
  
     <style>
         .post-img {
-            height: 45vh;
+            height: 300px;
             width: 100%;
             object-fit:cover;
             border-radius:5px;
