--- a/template/base.html
+++ b/template/base.html
@@ -64,7 +64,7 @@
         <div class="fas fa-shopping-cart" id="cart-bt" style="display: none;"></div>
         <div class="fas fa-user" id="login-bt" style="display: none;"></div>
     </div>
-    <div id="google_translate_element cart-btn"></div>
+    <div id=" cart-btn"></div>
     <form action="/search" method="get" class="search-form">
         <input type="search" name="query" id="query" placeholder="search here...">
         <label for="search-box" class="fas fa-search"></label>
