--- a/template/post.html
+++ b/template/post.html
@@ -22,6 +22,7 @@
         }
         .post-body{
             padding: 25px;
+            overflow:hidden;
         }
         .post-category {
             font-size: 1rem;
