--- a/template/post.html
+++ b/template/post.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,23 +8,25 @@
     <title></title>
     <link rel="stylesheet" href="/static/css/new.css">
     <link rel="stylesheet" href="/static/css/swiper-bundle-min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-     <!-- js files -->
-     <script src="/static/js/swiper-bundle.min.js"></script>
-     <script src="/static/js/new.js"></script>
- 
+    <!-- js files -->
+    <script src="/static/js/swiper-bundle.min.js"></script>
+    <script src="/static/js/new.js"></script>
+
     <style>
         .post-img {
-            height: 250px;
-            width: 100%;
-            object-fit:cover;
-            border-radius:5px;
+            height: 300px;
+            width: 75%;
+            border-radius: 17px;
+            object-fit: fill;
         }
-        .post-body{
+
+        .post-body {
             padding: 25px;
-            overflow:hidden;
         }
+
         .post-category {
             font-size: 1rem;
             border: solid red 1px;
@@ -37,27 +40,34 @@
             border-radius: 3px;
             cursor: pointer;
         }
-        p{
+
+        p {
             font-size: medium;
         }
+
         .imgC {
-             margin: 25px 50px;
-             margin-top: 105px;
+            margin: 25px 50px;
+            margin-top: 105px;
         }
+
         .post-text {
             margin-bottom: 10px;
             justify-content: center;
             font-size: medium;
         }
-        strong{
+
+        strong {
             font-size: 14px;
         }
-        .block{
+
+        .block {
             padding: 20px;
         }
-        #wave{
+
+        #wave {
             margin: 25px;
         }
+
         .dot {
             height: 15px;
             width: 15px;
@@ -70,10 +80,12 @@
 </head>
 
 <body>
-<div class="container p-3">
-        <center><div class="imgC">
-            <img class="post-img " src="/media/{{post.image}}" alt="Card image cap" class="rounded mx-auto d-block"  >
-        </div></center>
+    <div class="container">
+        <center>
+            <div class="imgC">
+                <img class="post-img " src="/media/{{post.image}}" alt="Card image cap" class="rounded mx-auto d-block">
+            </div>
+        </center>
         <div class="post-body">
             <p class="post-text">{{post.content | safe}}</p>
         </div>
@@ -81,34 +93,37 @@
             <span class="post-category">{{post.cat}}</span><br>
             <center><button class="bt" id="rzp-button1">Make Payment</button></center>
         </div> -->
-        <center><div id="wave">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-        </div></center>
-</div>
+        <center>
+            <div id="wave">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        </center>
+    </div>
+
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script>
-    var options = {
-        "key": "rzp_test_VC3tOtjGRrNeRs", // Enter the Key ID generated from the Dashboard
-        "amount": "{{post.price}}", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
-        "currency": "INR",
-        "name": "Saptashrungi Agro",
-        "description": "Secured Payment",
-        "image": "https://example.com/your_logo",
-        // "order_id": "{{order_id}}",
-        // "order_id": "order_IluGWxBm9U8zJ8", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
-        "handler": function (response){
-            alert(response.razorpay_payment_id);
-            alert(response.razorpay_order_id);
-            alert(response.razorpay_signature)
-        },
-        "theme": {
-        "color": "orange"
-    }
-    };
-    var rzp1 = new Razorpay(options);
-    rzp1.on('payment.failed', function (response){
+        var options = {
+            "key": "rzp_test_VC3tOtjGRrNeRs", // Enter the Key ID generated from the Dashboard
+            "amount": "{{post.price}}", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+            "currency": "INR",
+            "name": "Saptashrungi Agro",
+            "description": "Secured Payment",
+            "image": "https://example.com/your_logo",
+            // "order_id": "{{order_id}}",
+            // "order_id": "order_IluGWxBm9U8zJ8", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+            "handler": function (response) {
+                alert(response.razorpay_payment_id);
+                alert(response.razorpay_order_id);
+                alert(response.razorpay_signature)
+            },
+            "theme": {
+                "color": "orange"
+            }
+        };
+        var rzp1 = new Razorpay(options);
+        rzp1.on('payment.failed', function (response) {
             alert(response.error.code);
             alert(response.error.description);
             alert(response.error.source);
@@ -116,11 +131,11 @@
             alert(response.error.reason);
             alert(response.error.metadata.order_id);
             alert(response.error.metadata.payment_id);
-    });
-    document.getElementById('rzp-button1').onclick = function(e){
-        rzp1.open();
-        e.preventDefault();
-    }
+        });
+        document.getElementById('rzp-button1').onclick = function (e) {
+            rzp1.open();
+            e.preventDefault();
+        }
     </script>
 
 </body>
