--- a/template/contact.html
+++ b/template/contact.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container" style="padding: 50px 50px;">
+    <div class="container">
         <div class="contact-box">
             <div class="left"></div>
             <div class="right">
