--- a/template/index.html
+++ b/template/index.html
@@ -9,7 +9,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Saptashrungi Agro is agricuture website provide complete information about agriculture equipments.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saptashrungi Agro</title>
 
@@ -30,7 +29,7 @@
 <body>
     
 <!-- home section starts  -->
-<section class="home"></section>
+<section style="margin-top: 50px;">
 <div id="carouselExampleCaptions" class="carousel slide car" data-bs-ride="false">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -107,7 +106,7 @@
 </section>
 
 <!-- features section ends -->
-
+<!-- 
 <div id="google_translate_element" style="display: block;"></div>
 
 <script type="text/javascript">
@@ -117,7 +116,7 @@
 </script>
 
 <script type="text/javascript"
-    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 
 <!-- products section starts  -->
 
