--- a/template/base.html
+++ b/template/base.html
@@ -56,7 +56,7 @@
         
         
     </nav>
-    <div id="google_translate_element"></div>
+    <!-- <div id="google_translate_element"></div> -->
     <div class="icons">
         
         <div class="fas fa-search" id="search-bt"></div>
@@ -64,7 +64,7 @@
         <div class="fas fa-shopping-cart" id="cart-bt" style="display: none;"></div>
         <div class="fas fa-user" id="login-bt" style="display: none;"></div>
     </div>
-    <div id=" cart-btn"></div>
+    <div id="cart-btn"></div>
     <form action="/search" method="get" class="search-form">
         <input type="search" name="query" id="query" placeholder="search here...">
         <label for="search-box" class="fas fa-search"></label>
@@ -182,14 +182,14 @@
 <script src="static/js/new.js"></script>
 
 <!--Google Translator-->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     function googleTranslateElementInit() {
         new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
     }
 </script>
 
 <script type="text/javascript"
-    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 
 </body>
 </html>
