--- a/template/index.html
+++ b/template/index.html
@@ -29,7 +29,7 @@
 <body>
     
 <!-- home section starts  -->
-<section style="margin-top: 50px;">
+<section >
 <div id="carouselExampleCaptions" class="carousel slide car" data-bs-ride="false">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
