--- a/template/index.html
+++ b/template/index.html
@@ -29,7 +29,7 @@
 <body>
     
 <!-- home section starts  -->
-
+<div class="home">
 <div id="carouselExampleCaptions" class="carousel slide car" data-bs-ride="false">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -67,7 +67,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-    
+</div>
 
 <!-- home section ends -->
 
