--- a/template/index.html
+++ b/template/index.html
@@ -11,6 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saptashrungi Agro</title>
+    <meta name="description" content="Saptshrungi agro website provide all information about agricultural equipments and price of agriculture equipment.">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
