--- a/template/index.html
+++ b/template/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saptashrungi Agro</title>
     <meta name="description" content="Saptshrungi agro website provide all information about agricultural equipments and price of agriculture equipment.">
-
+    <meta name="google-site-verification" content="9zqYJxC7kpHd4vYUMg-WUNKVSpXiy3VkV8rIdwgqdog" />
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
 
