--- a/template/post.html
+++ b/template/post.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/static/css/swiper-bundle-min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <meta name="google-site-verification" content="9zqYJxC7kpHd4vYUMg-WUNKVSpXiy3VkV8rIdwgqdog" />
     <!-- js files -->
     <script src="/static/js/swiper-bundle.min.js"></script>
     <script src="/static/js/new.js"></script>
