--- a/template/contact.html
+++ b/template/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/css/new.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
-    
+    <meta name="google-site-verification" content="9zqYJxC7kpHd4vYUMg-WUNKVSpXiy3VkV8rIdwgqdog" />
 </head>
 
 <body>
