--- a/template/videos.html
+++ b/template/videos.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
+<meta name="google-site-verification" content="9zqYJxC7kpHd4vYUMg-WUNKVSpXiy3VkV8rIdwgqdog" />
     <link rel="stylesheet" href="/static/css/swiper-bundle-min.css">
     <link rel="stylesheet" href="/static/css/new.css">
     <!-- js files -->
