--- a/template/Category.html
+++ b/template/Category.html
@@ -11,6 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Bootstrap CSS -->
+<meta name="google-site-verification" content="9zqYJxC7kpHd4vYUMg-WUNKVSpXiy3VkV8rIdwgqdog" />
     <link rel="stylesheet" href="/static/css/new.css">
     <link rel="stylesheet" href="/static/css/swiper-bundle-min.css">
 
