--- a/template/500.html
+++ b/template/500.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title></title>
+<meta name="google-site-verification" content="9zqYJxC7kpHd4vYUMg-WUNKVSpXiy3VkV8rIdwgqdog" />
         <!-- custom css file link  -->
     <link rel="stylesheet" href="/static/css/new.css">
 
